...
        android:textColorHint="#FF0000"
        android:textColorLink="#FF0000"
        android:textSize="20sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/add_subscription_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"

        android:text="Add Subscriptions"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="38dp" />


    <ImageButton
        android:id="@+id/sort_button"
        android:layout_width="25dp"
        android:layout_height="29dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="112dp"
        android:layout_toEndOf="@+id/add_subscription_button"
...
